new proj/src/objects/GE_HQ_Account_Plan__c.object
<CustomObject>
    <fields>
        <fullName>GE_HQ_Business_Tier1__c</fullName>
        <label>Business - Tier 1</label>
        <picklist>
            <picklistValues>
                <fullName>ES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P&amp;W</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O&amp;G</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Buss_Tier1__c</fullName>
        <label>Tier 2 P&amp;L</label>
        <picklist>
            <controllingField>GE_HQ_Buss_Tier__c</controllingField>
            <picklistValues>
                <fullName>Industrial Solutions (IS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Energy (DE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Converteam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turbo Machinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PII Pipeline Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Services (GS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Measurement &amp; Control (M&amp;C)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas Engines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aero Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thermal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE Hitachi Nuclear Energy (GEH)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Gen Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drilling &amp; Surface (D&amp;S)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subsea (SS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lufkin</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Buss_Tier__c</fullName>
        <label>Tier 1 P&amp;L</label>
        <picklist>
            <picklistValues>
                <fullName>Oil &amp; Gas (O&amp;G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Management (EM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power &amp; Water (P&amp;W)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_DDUNS_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GE Energy Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.GE_HQ_DUNS_Number__c</field>
                <operation>startsWith</operation>
                <value>GEGUL</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Plans (DDUNS)</relationshipLabel>
        <relationshipName>Account_Plans1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_HQ_DDUNS_fm__c</fullName>
        <formula>GE_HQ_DDUNS_Number__r.GE_HQ_DUNS_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GE Energy Account DDUNS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_P_L__c</fullName>
        <label>P&amp;L</label>
        <picklist>
            <picklistValues>
                <fullName>ES &gt; DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES &gt; Dresser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES &gt; Env</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES &gt; Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES &gt; MCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES &gt; PGS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O&amp;G &gt; D&amp;PS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O&amp;G &gt; PII</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O&amp;G &gt; TM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P&amp;W &gt; Aero</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P&amp;W &gt; Gasification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P&amp;W &gt; Jenbacher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P&amp;W &gt; Nuclear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P&amp;W &gt; Renewables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P&amp;W &gt; Thermal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P&amp;W &gt; Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P&amp;W &gt; Water IWS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P&amp;W &gt; Wind Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P&amp;W &gt; Wind Services</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Pb_Long_Term__c</fullName>
        <label>Playbook Long Term</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Pb_Short_Term__c</fullName>
        <label>Playbook Short Term</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Risk_Indicator__c</fullName>
        <label>Risk Indicator</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_HQ_Select_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Plans2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SupportCentral_HelpTxt__c</fullName>
        <formula>&quot;To communicate changes for DDUNS please submit a request in support central&quot; &amp; BR() &amp; BR() &amp; HYPERLINK(&quot;http://data.supportcentral.ge.com/data/sup_document.asp?id=1953513&amp;type=doc&quot;, &quot;Support Central Link&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;font color=&quot;white&quot;&gt;&lt;/font&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_AccountFormulaId__c</fullName>
        <formula>GE_PRM_Account__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountFormulaId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Tier_2_P_L__c</fullName>
        <label>Tier 2 P&amp;L</label>
        <picklist>
            <picklistValues>
                <fullName>PII Pipeline Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Measurement &amp; Control (M&amp;C)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drilling &amp; Surface (D&amp;S)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subsea (SS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lufkin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_Tier_3_P_L__c</fullName>
        <label>Tier 3 P&amp;L</label>
        <picklist>
            <controllingField>GE_OG_Tier_2_P_L__c</controllingField>
            <picklistValues>
                <fullName>Advanced Sensors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bently Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractual Services (CS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D&amp;S - AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D&amp;S - Drilling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D&amp;S - DT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D&amp;S - Logging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D&amp;S - PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow &amp; Process Technologies (Dresser)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Services Multi P&amp;L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Line Inspection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inspection Technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrity Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance Services (MS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Measurement Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reuter Stokes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SS - Offshore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SS - Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SS - Subsea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SS - Well Stream</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology Services (TS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wayne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS - Opex Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS - Opex CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS - Service Multi P&amp;Ls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS - Upgrades</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS-Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS-New Units</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salof</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_AP_AppDate__c</fullName>
        <label>Account Plan Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_PRM_AP_SubDate__c</fullName>
        <label>Account Plan Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Channel Partner Account linked to this new Account Plan</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Plans</relationshipLabel>
        <relationshipName>Account_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Act_Plan__c</fullName>
        <label>Account Plan Record Type Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_CAP_Com_CT__c</fullName>
        <formula>GE_PRM_AP_SubDate__c - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel Account Plan Complete Cycle Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_CM_AP_App_CT__c</fullName>
        <formula>GE_PRM_AP_AppDate__c -  GE_PRM_AP_SubDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chn Mgr Account Plan Approval Cycle Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_CY_Total_Target__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CY $ Total Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Category__c</fullName>
        <inlineHelpText>As a channel partner, do you have specific capabilities important to highlight based on the value activities you are performing to the end user ?</inlineHelpText>
        <label>Specific Capabilities</label>
        <picklist>
            <picklistValues>
                <fullName>Stocking Commitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portion Sales from stock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certified Engineers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Association Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitive Product Lines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geography Covered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transaction Detail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Channel_Mission_Strategy__c</fullName>
        <inlineHelpText>What are the channel partner&apos;s mission and strategy to serve their customer and achieve their targets ?</inlineHelpText>
        <label>Channel Mission &amp; Strategy</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Channel_Representative_Type__c</fullName>
        <inlineHelpText>Channel Partner Type  (SR = Sales Rep, VAR = Value Added Reseller, DR = Distributor, SMC = Consultant, RSL = Reseller) based on the value activities they are performing to the end user.</inlineHelpText>
        <label>Channel Representative Type</label>
        <picklist>
            <picklistValues>
                <fullName>Sales Representative (SR)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor (DR)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant (SMC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Added Reseller (VAR)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller (RSL)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Channel_Sales_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>GE sales/channel manager name, focal point into GE for the external channel partner,  who is responsible for this account plan</inlineHelpText>
        <label>GE Channel/Sales Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Comments__c</fullName>
        <inlineHelpText>Comments box to provide more details on channel partner capabilities or any other comments</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Completed_By__c</fullName>
        <inlineHelpText>Channel Partner Contact Name, who complete the Account Plan</inlineHelpText>
        <label>Completed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Desc_of_Business__c</fullName>
        <inlineHelpText>What are the activities the channel partner is performing for their customers?</inlineHelpText>
        <label>Description of your Business</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Description_of_Market_Place__c</fullName>
        <inlineHelpText>What are the types of customers the channel partner serve, how is the economic situation, what are the growth trends,… ?</inlineHelpText>
        <label>Description of Market Place</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Email__c</fullName>
        <formula>GE_PRM_Related_Partner_User__r.Contact.Email</formula>
        <inlineHelpText>Channel Partner Email, who is completing the Account Plan</inlineHelpText>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Key_past_successes__c</fullName>
        <inlineHelpText>What are some main success stories with your customers/GE that significantly impacted your last performance / results / achievements ?</inlineHelpText>
        <label>Key past successes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_No_of_GE_Energy_demo_units__c</fullName>
        <inlineHelpText>As a channel partner, do you have material you can use for demo purposes, such as Trade Shows, Conferences or live demo of how product works ?</inlineHelpText>
        <label>Number of GE Energy demo units you have</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_No_of_Sales_Team_People__c</fullName>
        <defaultValue>0</defaultValue>
        <label># of Sales Team People</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Org_knowledge_of_GE_Energy_Prod__c</fullName>
        <inlineHelpText>What do you plan to do to improve your organization&apos;s knowledge of GE Energy&apos;s products (I.e. Self-training, GE Energy&apos;s courses, …) ?</inlineHelpText>
        <label>Plans to Improve GE Products Knowledge</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Parent_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account Plan</label>
        <referenceTo>GE_HQ_Account_Plan__c</referenceTo>
        <relationshipLabel>Account Plans</relationshipLabel>
        <relationshipName>Account_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Phone__c</fullName>
        <formula>GE_PRM_Related_Partner_User__r.Contact.Phone</formula>
        <inlineHelpText>Channel Partner Phone #, who is completing the Account Plan</inlineHelpText>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Plans_To_Improve_Org_Knowledge__c</fullName>
        <inlineHelpText>What has been done in the past year to improve your organization&apos;s knowledge of GE Energy&apos;s products (Example: Self-training, GE Energy&apos;s courses, …) ?</inlineHelpText>
        <label>Past Actions for GE Products Knowledge</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Related_Partner_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Channel Partner Contact Name, who is completing the Account Plan</inlineHelpText>
        <label>Related Partner User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Plans1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Status__c</fullName>
        <inlineHelpText>Sales/Channel manager in Progress =  GE Sales/Manager, who is working on the account plan. Channel Parter in Progress = The partner, who is working on the account plan. Approved = the partner and GE Sales/Manager agreed terms for the year.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Channel Partner in Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales/Channel Manager in Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Systems_Integration_Activities__c</fullName>
        <inlineHelpText>As a channel partner, if you perform Systems Integration Work, please provide more details on these activities</inlineHelpText>
        <label>Systems Integration Activities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Systems_Integration_Work__c</fullName>
        <inlineHelpText>As a channel partner,  do you integrate other equipment with GE equipment to provide a complete solution?</inlineHelpText>
        <label>Do you also do Systems Integration Work?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_T_AP_Cyc_T__c</fullName>
        <formula>GE_PRM_AP_AppDate__c - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Account Plan Cycle Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Tier_1__c</fullName>
        <inlineHelpText>Tier 1 P&amp;L (Power &amp; Water/ Energy Management/Oil &amp; Gas) the GE sale/channel manager depends on</inlineHelpText>
        <label>Tier 1 P&amp;L</label>
        <picklist>
            <picklistValues>
                <fullName>Oil &amp; Gas (O&amp;G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power &amp; Water (P&amp;W)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Management (EM)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Tier_2__c</fullName>
        <inlineHelpText>Tier 2 P&amp;L (linked on the Tier 1 P&amp;L selected) the GE sale/channel manager depends on (if applicable). Example: Digital Energy/Tier 2 P&amp;L depends on Energy management/Tier 1 P&amp;L</inlineHelpText>
        <label>Tier 2 P&amp;L</label>
        <picklist>
            <controllingField>GE_HQ_Buss_Tier__c</controllingField>
            <picklistValues>
                <fullName>Aero Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Energy (DE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drilling &amp; Production (D&amp;P)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas Engines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE Hitachi Nuclear Energy (GEH)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Services (GS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Solutions (IS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Measurement &amp; Control (M&amp;C)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PII Pipeline Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Gen Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub Sea Systems (SS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thermal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turbo Machinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributed Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drilling &amp; Surface (D&amp;S)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subsea (SS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lufkin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Tier_3__c</fullName>
        <inlineHelpText>Tier 3 P&amp;L (linked on the Tier 2 P&amp;L selected) the GE sale/channel manager depends on (if applicable). Example: Prolec /Tier 3 P&amp;L depends on Digital Energy/Tier 2 P&amp;L</inlineHelpText>
        <label>Tier 3 P&amp;L</label>
        <picklist>
            <controllingField>GE_PRM_Tier_2__c</controllingField>
            <picklistValues>
                <fullName>Advanced Sensors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aero Packaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aero Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Filtration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Artificial Lift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Artificial Lift (AL)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bently Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blower &amp; Comp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical &amp; Monitoring Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals &amp; Monitoring Solutions (CMS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Condition Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractual Services (CS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D&amp;S - AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D&amp;S - Drilling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D&amp;S - DT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D&amp;S - Logging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D&amp;S - PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS-Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS-New Units</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS - Opex Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS - Opex CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS - Service Multi P&amp;Ls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS - Upgrades</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downhole Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downhole Technology (DT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drilling</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Top_3_things_you_need_from_GE__c</fullName>
        <inlineHelpText>What are the top 3 things you need from GE to help you grow</inlineHelpText>
        <label>Top 3 things you need from GE</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Total_Activity_Sales_Team_Spend__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total % of Time on GE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Year__c</fullName>
        <inlineHelpText>Year the Account Plan is applicable for</inlineHelpText>
        <label>Year</label>
        <picklist>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2021</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2022</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2023</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2024</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2025</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>